--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
         retrofit_version = '2.9.0'
         okHttp_version = '4.9.3'
         moshi_version = '1.13.0'
+        androidXTestCoreVersion = '1.4.0'
+        robolectricVersion = '4.8'
     }
 }
 plugins {
