--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,12 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okHttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
 
+    // Cache
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+
+    kapt "androidx.room:room-compiler:$room_version"
     // Utils
     implementation "com.jakewharton.timber:timber:$timber_version"
 }
