--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NyTimes"
+        android:theme="@style/Theme.BasicState"
         tools:targetApi="31">
         <activity
-            android:name="com.organization.nytimes.MainActivity"
+            android:theme="@style/Theme.BasicState"
+            android:name=".ui.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
