--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.test.ext:junit-ktx:1.1.3'
@@ -81,6 +82,8 @@ dependencies {
     testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
     testImplementation "org.robolectric:robolectric:$robolectricVersion"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
+    testImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
 
 
     // DI
