--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         robolectricVersion = '4.8'
         room_version = '2.4.3'
         composeNavigationVersion = '2.5.2'
+        mockwebserver_version = '4.9.3'
     }
 }
 plugins {
