--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import com.organization.nytimes.buildsrc.Libs
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -56,68 +58,56 @@ android {
 }
 
 dependencies {
+    // Compose
+    implementation Libs.Compose.ui
+    implementation Libs.Compose.material
+    implementation Libs.Compose.uiToolingPreview
+    debugImplementation Libs.Compose.uiTooling
+    debugImplementation Libs.Compose.uiTestManifest
+    implementation Libs.Navigation.compose
+    implementation Libs.Compose.activity
+    implementation Libs.Compose.viewModel
+    implementation Libs.Compose.coil
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.activity:activity-compose:1.6.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation "io.coil-kt:coil-compose:2.1.0"
-    implementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'junit:junit:4.12'
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "androidx.navigation:navigation-compose:$composeNavigationVersion"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
-    // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    androidTestImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
-    testImplementation("com.squareup.okhttp3:mockwebserver:$mockwebserver_version")
+    // Testing
+    androidTestImplementation Libs.Compose.uiTestJUnit4
+    androidTestImplementation Libs.Testing.uiAutomator
+    testImplementation Libs.Testing.jUnit
+    androidTestImplementation Libs.Testing.rules
+
+    testImplementation Libs.Testing.junitKtx
+    testImplementation Libs.Testing.robolectric
+    androidTestImplementation Libs.Testing.mockWebServer
+    testImplementation Libs.Testing.mockWebServer
 
 
-    // DI
-    implementation("com.google.dagger:hilt-android:$hilt_version")
-    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
-    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    // Hilt
+    implementation Libs.Hilt.android
+    kapt Libs.Hilt.androidCompiler
+    kapt Libs.Hilt.compiler
     // For instrumented tests.
-    androidTestImplementation("com.google.dagger:hilt-android-testing:$hilt_version")
+    androidTestImplementation Libs.Hilt.androidTesting
     // ...with Kotlin.
-    kaptAndroidTest("com.google.dagger:hilt-android-compiler:$hilt_version")
+    kaptAndroidTest Libs.Hilt.androidCompiler
     // For Robolectric tests.
-    testImplementation("com.google.dagger:hilt-android-testing:$hilt_version")
+    testImplementation Libs.Hilt.androidTesting
     // ...with Kotlin.
-    kaptTest("com.google.dagger:hilt-android-compiler:$hilt_version")
-
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    kaptTest Libs.Hilt.androidCompiler
+    // compose navigation
+    implementation Libs.Hilt.navigation
 
 
     // NETWORK
-    implementation "com.google.code.gson:gson:$gson_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:$okHttp_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okHttp_version"
+    implementation Libs.Network.gson
+    implementation Libs.Network.gsonConverter
+    implementation Libs.Network.retrofit
+    implementation Libs.Network.okhttp
+    implementation Libs.Network.loggingInterceptor
 
     // Cache
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
-
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation Libs.Cache.runtime
+    implementation Libs.Cache.ktx
+    kapt Libs.Cache.compiler
     // Utils
-    implementation "com.jakewharton.timber:timber:$timber_version"
+    implementation Libs.Others.timber
 }
