--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+buildscript{
+    repositories {
+        google()
+    }
+    dependencies{
+        classpath "org.jacoco:org.jacoco.core:0.8.7"
+    }
+}
 plugins {
     id 'com.android.application' version '7.2.2' apply false
     id 'com.android.library' version '7.2.2' apply false
